fix: corregir CORS para permitir cualquier origen (MVP)
Reemplaza setAllowedOrigins (lista fija de URLs) por
setAllowedOriginPatterns(*) que admite cualquier origen
incluyendo Vercel, y es compatible con allowCredentials=true.
Esto corrige el 403 al hacer login desde el frontend desplegado.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>